adding new changes and mejoras
